welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:3: error: reassignment to val
	if (litMessage=R) {
                      ^BDRBuggle:7: error: reassignment to val
	else if (litMessage=L) {
                           ^BDRBuggle:11: error: reassignment to val
	else if (litMessage=I) {
                           ^BDRBuggle:16: error: reassignment to val
	else if (litMessage=A)
                           ^BDRBuggle:18: error: reassignment to val
	else if (litMessage=B) {
                           ^BDRBuggle:22: error: reassignment to val
	else if (litMessage=C) {
                           ^BDRBuggle:27: error: reassignment to val
	else if (litMessage=Z)
                           ^BDRBuggle:29: error: reassignment to val
	else if (litMessage=Y) {
                           ^BDRBuggle:33: error: reassignment to val
	else if (litMessage=X) {
                           ^